# amtap

./: .gitignore  LICENSE  README.md  SPEC.md  main.py  mise.toml  pyproject.toml
src/amtap/: main.py
