[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amtap"]

[project]
name = "amtap"
version = "0.1.0"
description = "A tool to tap and store BPM for currently playing Apple Music songs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mutagen>=1.47.0",
    "textual>=8.2.0",
]

[project.scripts]
amtap = "amtap.main:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
